--- a/incubator/simu_cov.Rmd
+++ b/incubator/simu_cov.Rmd
@@ -622,7 +622,114 @@ sim2.fit.beta.median
 beta.true.final
 ```
 
-##### Plot Poor Estimates
+##### 95% Interval Coverage
+
+Find 95% quantile intervals for each beta
+```{r}
+lower.95 <- apply(sim2.fit$beta, MARGIN = c(1,2), FUN = function(x) quantile(x,
+                                                                 prob = 0.025
+                                                                 )
+      )
+
+upper.95 <- apply(sim2.fit$beta, MARGIN = c(1,2), FUN = function(x) quantile(x,
+                                                                 prob = 0.975
+                                                                 )
+      )
+```
+
+Find percentage of true values outside of 95% quantile interval
+```{r}
+beta.coverage <- beta.true.final >= lower.95 & beta.true.final <= upper.95
+
+print(
+  paste(
+    "Percent true betas within 95% quantile interval:",
+    round(
+      sum(
+        beta.coverage
+      ) / length(beta.true.final) * 100,
+      2
+    )
+  )
+)
+```
+
+##### Plot Posteriors Not Achieving Coverage
+
+```{r}
+#Loop over rows of beta.diff and find row,col of estimates that fail to achieve coverage
+beta.no.cover.coord <- list(NULL)
+for (i in 1:nrow(beta.coverage)) {
+  if(length(which(beta.coverage[i,] == FALSE)) > 0) {
+    #Paste the row name (i) with the indices of the columns for the current row
+    beta.no.cover.coord[[i]] <- paste(i, which(beta.coverage[i,] == FALSE), sep = ", ")
+  } else {
+    beta.no.cover.coord[[i]] <- NULL
+  }
+}
+
+beta.no.cover.coord.df <- do.call('c', beta.no.cover.coord)
+```
+
+Extract and plot posterior samples for flagged coefs
+```{r}
+lapply(1:length(beta.no.cover.coord.df), FUN = function(i) {
+  #Extract the posterior samples for the current beta
+  post <- data.frame(samples = eval(parse(text = paste0("sim2.fit$beta",
+                           "[",
+                           beta.no.cover.coord.df[i],
+                           ",]"
+                           )
+                                         )
+                                   )
+       )
+  
+  #Extract the true beta value
+  true.beta <- eval(parse(text = paste0("beta.true.final",
+                         "[",
+                         beta.no.cover.coord.df[i],
+                         "]"
+                                   )
+                     )
+               )
+  
+  #Make the plot
+  ggplot(data = post,
+         aes(x = samples)
+    )+
+    theme_bw()+
+    geom_vline(xintercept = 0,
+               size = 0.6,
+               color = "dark gray"
+    )+
+    geom_hline(yintercept = 0,
+               size = 0.6,
+               color = "dark gray"
+    )+
+    ggdist::stat_halfeye(
+      .width = c(0.95, 0.8),
+      point_interval = "median_qi"    #Use median for point est
+    )+
+    geom_vline(xintercept = true.beta,
+               color = "blue"
+    )+
+    xlab("Posterior sample")+
+    labs(title = paste0("Cluster: ", 
+                stringr::str_split(beta.no.cover.coord.df[i],
+                                   pattern = ", ",
+                                   simplify = TRUE
+                )[1],
+                ", Covariate: ",
+                stringr::str_split(beta.no.cover.coord.df[i],
+                                   pattern = ", ",
+                                   simplify = TRUE
+                )[2]
+                )
+    )
+})
+```
+
+##### Plot Posteriors for Estimates far from True Value
 
 A cutoff value for the diff between true and estimated beta to decide whether to plot the corresponding posterior
 ```{r}
@@ -647,7 +754,7 @@ for (i in 1:nrow(beta.diff)) {
 beta.poor.coord.df <- do.call('c', beta.poor.coord)
 ```
 
-Extract and plot posterior samples for chosen beta
+Extract and plot posterior samples for flagged coefs
 ```{r}
 lapply(1:length(beta.poor.coord.df), FUN = function(i) {
   #Extract the posterior samples for the current beta
