MAJOR CHANGE: Method 2 (including kth cluster when simulating counts from Dirichlet-Multinomial) was the only successful data simulation method, remove other methods.

--- a/incubator/simu_cov.Rmd
+++ b/incubator/simu_cov.Rmd
@@ -62,8 +62,6 @@ Keep only the last X iterations and use the first ones to warm up chains.
   2. Different number of total events and event subsets for stim and unstim samples
 
 
-## Method 1
-
 **Approach**
 
   1. Matrix of true betas for each k-1 subset for each covariate p ~ Normal(beta.mu, beta.sigma)
@@ -80,6 +78,7 @@ Keep only the last X iterations and use the first ones to warm up chains.
     4. Find the counts in the kth subset (corresponding to all negative cell subset) as the total number of counts minus the sum of the first k - 1 subsets
       + This implies that the difference between stim and unstim for the kth subset is not a function of the betas
   
+## Simulate Data
 
 ### Set Fixed Parameters
 
@@ -188,216 +187,6 @@ for (i in 1:I) {
 }
 ```
 
-
-### True Counts
-
-Empty matrices for stim and unstim counts. **Note:** Create K columns with 0s, not K - 1
-```{r}
-n_u <- matrix(0,
-              nrow = I,
-              ncol = K)
-
-n_s <- matrix(0,
-              nrow = I,
-              ncol = K)
-```
-
-
-#### Unstimulated
-
-Generate unstimulated count values for each subject
-```{r}
-#Generate total counts
-Nu = ceiling(
-      rnorm(mean = e.total.mu, 
-            sd = e.total.sd,
-            n = I)
-)
-
-Nu.subset = ceiling(
-              rnorm(mean = e.subset.mu, 
-                    sd = e.subset.sd,
-                    n = I
-              ) 
-)
-```
-
-Loop over each sample and do two things:
-
-  1. Create a vector of length K - 1 (not K) of concentration parameters drawn from a lognormal distribution with an unstimulated-specific log-mean.
-  2. Using the vector of concentration parameters, draw a vector of counts of length K - 1 (not K) from a Dirichlet-Multinomial distribution and fill the first K - 1 columns of the ith row of n_u
-
-**Note:** Leave the last column as 0 for all negative cell subset
-
-```{r}
-concentration_u = matrix(NA,
-                         nrow = I,
-                         ncol = K1
-                  )
-
-for (i in 1:I) {
-  concentration_u[i,] = rlnorm(n = K1, 
-                 meanlog = (pu.logmu), 
-                 sdlog = p.logsd
-  )
-  #HMP version
-  # n_u[i,1:K1] = t(matrix(HMP::Dirichlet.multinomial(Nrs = Nu.subset[i], shape = concentration_u[i,])))
-  
-  #MultiRNG version
-  n_u[i,1:K1] = MultiRNG::draw.dirichlet.multinomial(N = Nu.subset[i],                    #Total counts
-                                                         no.row = 1,                      #Sample size
-                                                         d = length(concentration_u[i,]), #Number of categories (same as length of concentration vector)
-                                                         alpha = concentration_u[i,],     #Concentration vector
-                                                         beta = 1                         #Common shape parameter
-                                                              )
-}
-```
-
-Check rowsums
-```{r}
-identical(rowSums(n_u), Nu.subset)
-```
-
-Make the kth cluster be the remaining events for the sample
-```{r}
-n_u[,K] = Nu - rowSums(n_u)
-```
-
-Check rowsums
-```{r}
-identical(rowSums(n_u), Nu)
-```
-
-#### Stimulated
-
-Generate stimulated count values for each subject
-```{r}
-#Generate total counts
-Ns = ceiling(
-      rnorm(mean = e.total.mu, 
-            sd = e.total.sd,
-            n = I)
-)
-
-Ns.subset = ceiling(
-              rnorm(mean = e.subset.mu, 
-                    sd = e.subset.sd,
-                    n = I
-              ) 
-)
-```
-
-Loop over each sample and do two things:
-
-  1. Create a vector of length K - 1 (not K) of concentration parameters drawn from a lognormal distribution with an unstimulated-specific log-mean.
-  2. Using the vector of concentration parameters, draw a vector of counts of length K - 1 (not K) from a Dirichlet-Multinomial distribution and fill the first K - 1 columns of the ith row of n_u
-
-**Notes:** 
-
-  - Leave the last column as 0
-  - Concentration is shifted by ps.logmu.diff if gamma = 1
-
-```{r}
-concentration_s = matrix(NA,
-                         nrow = I,
-                         ncol = K1
-                  )
-
-for (i in 1:I) {
-  concentration_s[i, ] = rlnorm(n = K1, 
-                 meanlog = (pu.logmu + ps.logmu.diff * gamma.m[i, ]), 
-                 sdlog = p.logsd
-  )
-  #HMP version
-  # n_s[i,1:K1] = t(matrix(HMP::Dirichlet.multinomial(Nrs = Ns.subset[i], shape = concentration_s[i,])))
-  
-  #MultiRNG version
-  n_s[i,1:K1] = MultiRNG::draw.dirichlet.multinomial(N = Ns.subset[i],                #Total counts
-                                                     no.row = 1,                      #Sample size
-                                                     d = length(concentration_s[i,]), #Number of categories (same as length of concentration vector)
-                                                     alpha = concentration_s[i,],     #Concentration vector
-                                                     beta = 1                         #Common shape parameter
-                                                              )
-}
-
-```
-
-Check rowsums
-```{r}
-identical(rowSums(n_s), Ns.subset)
-```
-
-Make the kth cluster be the remaining events for the sample
-```{r}
-n_s[,K] = Ns - rowSums(n_s)
-```
-
-Check rowsums
-```{r}
-identical(rowSums(n_s), Ns)
-```
-
-### Run COMPASScovariate
-
-Create a version of X without an intercept column
-```{r}
-X.mod = X[,-1]
-```
-
-```{r message=FALSE, warning=FALSE}
-sim1.fit = .COMPASS.covariate(n_s = n_s, 
-                             n_u = n_u,
-                             X = X.mod,
-                             iterations = iter, 
-                             replication = rep)
-```
-
-### Compare Estimates to True
-
-Create a custom function for calculating the mode
-```{r}
-getmode <- function(v) {
-   uniqv <- unique(v)
-   uniqv[which.max(tabulate(match(v, uniqv)))]
-}
-```
-
-#### Gamma
-
-```{r}
-sim1.fit$mean_gamma[1:2,]
-```
-
-```{r}
-apply(sim1.fit$gamma, MARGIN = c(1,2), FUN = function(x) getmode(x))[1:2,]
-```
-
-
-```{r}
-gamma.m[1:2,]
-```
-
-```{r}
-n_u[1:2,]
-n_s[1:2,]
-```
-
-
-#### Betas
-
-```{r}
-apply(sim1.fit$beta, MARGIN = c(1,2), FUN = function(x) median(x))
-```
-
-```{r}
-beta.true.final
-```
-
-## Method 2
-
-**Approach**: An iteration of Method 1 above except allow the total number of counts in the k-1 category to increase depending on the number of gammas = 1 for that sample.
-
-**Note:** Re-use the regression coefs and gamma matrix from method 1 above.
 
 ### True Counts
 
@@ -548,7 +337,7 @@ rowSums(n_u)[1:10]
 rowSums(n_s)[1:10]
 ```
 
-### Run COMPASScovariate
+## Run COMPASScovariate
 
 Create a version of X without an intercept column
 ```{r}
@@ -563,7 +352,7 @@ sim2.fit = .COMPASS.covariate(n_s = n_s,
                              replication = rep)
 ```
 
-### Compare Estimates to True
+## Compare Estimates to True
 
 Create a custom function for calculating the mode
 ```{r}
@@ -573,7 +362,7 @@ getmode <- function(v) {
 }
 ```
 
-#### Gamma
+### Gamma
 
 ```{r}
 sim2.fit$mean_gamma[1:4,]
@@ -595,7 +384,7 @@ n_u[1:4,]
 n_s[1:4,]
 ```
 
-##### Percentage Correct
+#### Percentage Correct
 
 ```{r}
 print(
@@ -610,7 +399,7 @@ print(
 )
 ```
 
-#### Betas
+### Betas
 
 ```{r}
 sim2.fit.beta.median <- apply(sim2.fit$beta, MARGIN = c(1,2), FUN = function(x) median(x))
@@ -622,7 +411,7 @@ sim2.fit.beta.median
 beta.true.final
 ```
 
-##### 95% Interval Coverage
+#### 95% Interval Coverage
 
 Find 95% quantile intervals for each beta
 ```{r}
@@ -654,7 +443,7 @@ print(
 )
 ```
 
-##### Plot Posteriors Not Achieving Coverage
+#### Plot Posteriors Not Achieving Coverage
 
 ```{r}
 #Loop over rows of beta.diff and find row,col of estimates that fail to achieve coverage
@@ -729,7 +518,7 @@ lapply(1:length(beta.no.cover.coord.df), FUN = function(i) {
 })
 ```
 
-##### Plot Posteriors for Estimates far from True Value
+#### Plot Posteriors for Estimates far from True Value
 
 A cutoff value for the diff between true and estimated beta to decide whether to plot the corresponding posterior
 ```{r}
@@ -812,93 +601,3 @@ lapply(1:length(beta.poor.coord.df), FUN = function(i) {
 })
 ```
 
-
-
-## Method 3: Lynn's Original Method
-
-### True Regression Coefs
-
-```{r}
-X <- matrix(rnorm(I*p), ncol = p, nrow = I) # covariates
-mu_true = rnorm(K, 0, 1) # the true intercept
-alpha_true = matrix(rbinom(p*K1, 1, 0.7), nrow = K1) # variable selection indicators
-
-B_true = matrix(rnorm(K1*p, 0, 5), nrow = K1)
-Balpha = B_true*alpha_true # coefficients with zeros
-```
-
-### True Gamma Matrix
-
-```{r}
-gamma <- matrix(0, nrow = I, ncol =  K) ## 0/1 response
-
-#Loop over samples and create a gamma[i,k] via linear predictor from coefficients
-for(k in 1:K1){
-  z = mu_true[k] + X%*%(Balpha[k,]) # linear combination with a bias
-  pr = 1/(1+exp(-z))   # pass through an inv-logit function
-  gamma[,k] = unlist(lapply(pr, function(x) rbinom(1,1, x)))
-}
-
-gamma[,K] = rbinom(I,1,0.5) #Kth category has a 50/50 chance of being 1
-gamma_true = gamma
-```
-
-### True Counts
-
-```{r}
-pu_true = MCMCpack::rdirichlet(I, rep(10, K1)) #True unstim cluster props with concentration = 10
-n_u = array(0, dim = c(I, K)) #Container for k unstim cluster counts with 0s
-Nu = ceiling(rnorm(I,20000, 10)) #Make the total events per sample 20,000 on average
-#For each sample, generate counts in each k1 clusters, leaving the kth cluster as 0, with event count = 5000
-for(i in 1:I){
-  n_u[i,1:K1] = rmultinom(1, 5000, pu_true[i,])
-}
-#Make the kth cluster be the remaining events for the sample
-n_u[,K] = Nu - rowSums(n_u)
-ps_true = pu_true
-
-#Loop over samples
-for(i in 1:I){
-  l1 = which(gamma[i,1:K1]==1)
-  l0 = which(gamma[i,1:K1]==0)
-  ps_true[i,l1] = MCMCpack::rdirichlet(1, rep(20, length(l1)))*sum(pu_true[i,l1]) #For the clusters where gamma = 1, then change the prop by increasing concentration to 20, and normalize these to maintain 1
-}
-
-n_s = array(0, dim = c(I, K))
-Ns = ceiling(rnorm(I,30000, 10))
-for(i in 1:I){
-  n_s[i,1:K1] = rmultinom(1, 6000, ps_true[i,])
-}
-n_s[,K] = Ns - rowSums(n_s)
-```
-
-### Run COMPASScovariate
-
-```{r message=FALSE, warning=FALSE}
-sim2.fit = .COMPASS.covariate(n_s = n_s, 
-                             n_u = n_u,
-                             X = X,
-                             iterations = iter, 
-                             replication = rep)
-```
-
-### Compare Estimates to True
-
-#### Gamma
-
-```{r}
-sim2.fit$mean_gamma[1:2,]
-```
-
-```{r}
-apply(sim2.fit$gamma, MARGIN = c(1,2), FUN = function(x) getmode(x))[1:2,]
-```
-
-```{r}
-gamma_true[1:2,]
-```
-
-```{r}
-n_u[1:2,]
-n_s[1:2,]
-```
